--- a/devtools/client/webconsole/new-console-output/test/mochitest/test-console-trace-duplicates.html
+++ b/devtools/client/webconsole/new-console-output/test/mochitest/test-console-trace-duplicates.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Web Console test for bug 939783 - different console.trace() calls
-      wrongly filtered as duplicates</title>
+    <title>Web Console test for checking that different console.trace() calls
+      are not wrongly filtered as duplicates</title>
     
 
 <script type="application/javascript">
