--- a/testing/web-platform/tests/web-animations/timing-model/animations/canceling-an-animation.html
+++ b/testing/web-platform/tests/web-animations/timing-model/animations/canceling-an-animation.html
@@ -26,28 +26,29 @@ promise_test(t => {
 }, 'A play-pending ready promise should be rejected when the animation is'
    + ' canceled');
 
-promise_test(async t => {
+promise_test(t => {
   const animation = createDiv(t).animate(null, 100 * MS_PER_SEC);
-  await animation.ready;
-
-  // Make it pause-pending
-  animation.pause();
-
-  // We need to store the original ready promise since cancel() will
-  // replace it
-  const originalPromise = animation.ready;
-  animation.cancel();
-
-  await promise_rejects(t, 'AbortError', originalPromise,
-                        'Cancel should abort ready promise');
+  return animation.ready.then(() => {
+    animation.pause();
+    // Set up listeners on pause-pending ready promise
+    const retPromise = animation.ready.then(() => {
+      assert_unreached('ready promise was fulfilled');
+    }).catch(err => {
+      assert_equals(err.name, 'AbortError',
+                    'ready promise is rejected with AbortError');
+    });
+    animation.cancel();
+    return retPromise;
+  });
 }, 'A pause-pending ready promise should be rejected when the animation is'
    + ' canceled');
 
-promise_test(async t => {
+promise_test(t => {
   const animation = createDiv(t).animate(null);
   animation.cancel();
-  const promiseResult = await animation.ready;
-  assert_equals(promiseResult, animation);
+  return animation.ready.then(p => {
+    assert_equals(p, animation);
+  });
 }, 'When an animation is canceled, it should create a resolved Promise');
 
 test(t => {
