--- a/dom/tests/mochitest/bugs/test_bug641552.html
+++ b/dom/tests/mochitest/bugs/test_bug641552.html
@@ -18,7 +18,7 @@
 
 SimpleTest.waitForExplicitFinish();
 
-var contractId = "@mozilla.org/xmlextras/xmlhttprequest;1";
+var contractId = "@mozilla.org/xmlextras/domparser;1";
 var categoryEntries = [
   {category: "JavaScript-global-property", entry: "randomname", contractId: contractId},
 ];
