--- a/testing/web-platform/tests/css/css-transforms/transform-input-017.html
+++ b/testing/web-platform/tests/css/css-transforms/transform-input-017.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CSS Test (Transforms): Input (type=range)</title>
+    <title>CSS Test (Transforms): Input (type=checkbox)</title>
     <link rel="author" title="Aryeh Gregor" href="mailto:ayg@aryeh.name">
-    <link rel="help" href="http://www.w3.org/TR/css-transforms-1/#transform-property">
     <link rel="reviewer" title="Apple Inc." href="http://www.apple.com">
+    <link rel="help" href="http://www.w3.org/TR/css-transforms-1/#transform-property">
     <meta name="assert" content='The input element is an atomic inline element,
     so it falls under the definition of transformable and should be affected by
     transformations as usual.  This is one in a series of tests that verify
@@ -12,8 +12,8 @@
     inputs.  (They only test a few very specific transforms because it would be
     difficult to construct a correct reference file for more complex
     transforms.)'>
-    <link rel="match" href="transform-input-015-ref.html">
-    <meta name="fuzzy" content="maxDifference=0-51;totalPixels=0-179">
+    <link rel="match" href="transform-input-017-ref.html">
+    <meta name="fuzzy" content="maxDifference=0-48;totalPixels=0-16">
     <style>
       input {
         /* Margin to avoid overlap of translated inputs */
@@ -37,11 +37,11 @@
     </style>
   </head>
   <body>
-    <p>type=range</p>
-    <input value="613" min="0" max="1000" type="range">
-    <input value="613" min="0" max="1000" type="range">
-    <input value="613" min="0" max="1000" type="range">
-    <input value="613" min="0" max="1000" type="range">
-    <input value="613" min="0" max="1000" type="range">
+    <p>type=checkbox</p>
+    <input type="checkbox" checked>
+    <input type="checkbox">
+    <input type="checkbox" checked>
+    <input type="checkbox">
+    <input type="checkbox" checked>
   </body>
 </html>
