--- a/toolkit/content/tests/chrome/window_popup_attribute.xhtml
+++ b/toolkit/content/tests/chrome/window_popup_attribute.xhtml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <?xml-stylesheet href="chrome://global/skin" type="text/css"?>
+<?xml-stylesheet href="data:text/css,menupopup{margin: 0}" type="text/css"?>
 
 <window title="Popup Attribute Tests"
         xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
