--- a/testing/web-platform/tests/css/css-counter-styles/hebrew/css3-counter-styles-016a-alt-ref.html
+++ b/testing/web-platform/tests/css/css-counter-styles/hebrew/css3-counter-styles-016a-alt-ref.html
@@ -3,26 +3,24 @@
 <head>
 <meta charset="utf-8">
 <title>hebrew, outside range</title>
-<link rel='author' title='Richard Ishida' href='mailto:ishida@w3.org'>
+<link rel="author" title="Mats Palmgren" href="mailto:mats@mozilla.com">
 <link rel='help' href='http://www.w3.org/TR/css-counter-styles-3/#simple-numeric'>
-<link rel="reviewer" title="Chris Lilley" href="mailto:chris@w3.org">
-<link rel='match' href='css3-counter-styles-016a-ref.html'>
-<link rel='match' href='css3-counter-styles-016a-alt-ref.html'><!-- Gecko prefers this rendering over the fallback rendering -->
-<meta name="assert" content="list-style-type: hebrew produces numbers in the fallback counter style above the limit per the spec.">
+<link rel='help' href='https://bugzilla.mozilla.org/show_bug.cgi?id=1738356'>
+<meta name='flags' content='font'>
 <style>
 ol li { list-style-type: hebrew;  }
 /* the following CSS is not part of the test */
 .test { font-size: 25px; }
-ol { margin: 0; padding-left: 8em; list-style-position: inside; }
+ol { margin: 0; padding-left: 8em; }
 </style>
 </head>
 <body>
 <p class="instructions">Test passes if the two columns are the same, IGNORING the suffix.</p>
 <div class="test">
 <ol start="10999">
-<li title="10999">י׳תתקצט</li>
-<li title='11000'>11000</li>
-<li title='11001'>11001</li>
+<div><bdi dir=ltr>י׳תתקצט. </bdi>י׳תתקצט</div>
+<div><bdi dir=ltr>יא׳. </bdi>11000</div>
+<div><bdi dir=ltr>יא׳א. </bdi>11001</div>
 </ol>
 </div>
 <!--Notes:
