--- a/testing/web-platform/tests/css/css-counter-styles/trad-chinese-informal/css3-counter-styles-083-alt-ref.html
+++ b/testing/web-platform/tests/css/css-counter-styles/trad-chinese-informal/css3-counter-styles-083-alt-ref.html
@@ -2,25 +2,23 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>simp-chinese-informal, outside range</title>
-<link rel='author' title='Richard Ishida' href='mailto:ishida@w3.org'>
+<title>trad-chinese-informal, outside range</title>
+<link rel="author" title="Mats Palmgren" href="mailto:mats@mozilla.com">
 <link rel='help' href='http://www.w3.org/TR/css-counter-styles-3/#complex-cjk'>
-<link rel="reviewer" title="Chris Lilley" href="mailto:chris@w3.org">
-<link rel='match' href='css3-counter-styles-073-ref.html'>
-<link rel='match' href='css3-counter-styles-073-alt-ref.html'><!-- Gecko prefers this rendering over the fallback rendering -->
-<meta name="assert" content="[Exploratory] list-style-type: simp-chinese-informal produces counter values outside its range without using the prescribed fallback style.">
+<link rel='help' href='https://bugzilla.mozilla.org/show_bug.cgi?id=1738356'>
+<meta name='flags' content='font'>
 <style>
 .test { font-size: 25px; }
 ol { margin: 0; padding-left: 8em; }
-ol { list-style-type: simp-chinese-informal; list-style-position: inside; }
+ol li { list-style-type: trad-chinese-informal;  }
 </style>
 </head>
 <body>
 <p class="instructions">Test fails if the two columns of the first line are NOT the same. Otherwise, test passes only if the left column of the 2nd and 3rd lines is NOT decimal digits and is NOT the same as the right side.  Score as Partial if the columns of the 2nd and 3rd lines are the same (ie. fallback was used). In all this IGNORE the suffix.</p>
 <div class="test"><ol start="9999">
-<li title="9999">九千九百九十九</li>
-<li title="10000">一〇〇〇〇</li>
-<li title="10001">一〇〇〇一</li>
+<div><bdi>九千九百九十九、</bdi>九千九百九十九</div>
+<div><bdi>一萬、</bdi>一〇〇〇〇</div>
+<div><bdi>一萬零一、</bdi>一〇〇〇一</div>
 </ol></div>
 <!--Notes:
 You will need an appropriate font to run this test.
