--- a/testing/web-platform/tests/web-bundle/subresource-loading/script-reuse-web-bundle-resource.https.tentative.html
+++ b/testing/web-platform/tests/web-bundle/subresource-loading/script-reuse-web-bundle-resource.https.tentative.html
@@ -16,6 +16,7 @@
     });
 
     const wbn_url = "../resources/wbn/subresource.wbn";
+    const wbn_suffix = "subresource.wbn";
     const resource1 = "root.js";
     const resource2 = "submodule.js";
 
@@ -64,17 +65,17 @@
       script1 = createScriptWebBundle1();
       document.body.append(script1);
       await assertResource1CanBeFetched();
-      assert_equals(webBundleFetchCount(), 1);
+      assert_equals(webBundleFetchCount(wbn_suffix), 1);
     }
 
     function clearWebBundleFetchCount() {
       performance.clearResourceTimings();
     }
 
-    function webBundleFetchCount() {
+    function webBundleFetchCount(web_bundle_suffix) {
       return performance
         .getEntriesByType("resource")
-        .filter((e) => e.name.endsWith("subresource.wbn")).length;
+        .filter((e) => e.name.endsWith(web_bundle_suffix)).length;
     }
 
     promise_test(async (t) => {
@@ -89,7 +90,7 @@
 
       await assertResource1CanBeFetched()
       await assertResource2CanBeFetched();
-      assert_equals(webBundleFetchCount(), 1);
+      assert_equals(webBundleFetchCount(wbn_suffix), 1);
     }, "A webbundle should be fetched again when new script element is appended.");
 
     promise_test(async (t) => {
@@ -105,8 +106,44 @@
 
       await assertResource1CanNotBeFetched();
       await assertResource2CanBeFetched();
-      assert_equals(webBundleFetchCount(), 0);
+      assert_equals(webBundleFetchCount(wbn_suffix), 0);
     }, "'remove(), then append()' should reuse webbundle resources");
+
+    promise_test(async (t) => {
+      t.add_cleanup(cleanUp);
+      clearWebBundleFetchCount();
+      script1 = createScriptWebBundle1();
+      await addElementAndWaitForLoad(script1);
+      clearWebBundleFetchCount();
+
+      // Remove script1, then append script2
+      // script2 should reuse webbundle resources.
+      // And it should also fire a load event.
+      script1.remove();
+      script2 = createScriptWebBundle2();
+      await addElementAndWaitForLoad(script2);
+
+      await assertResource1CanNotBeFetched();
+      await assertResource2CanBeFetched();
+      assert_equals(webBundleFetchCount(wbn_suffix), 0);
+    }, "'remove(), then append()' should reuse webbundle resources and both scripts should fire load events");
+
+    promise_test(async (t) => {
+      t.add_cleanup(cleanUp);
+      clearWebBundleFetchCount();
+      script1 = createWebBundleElement("nonexistent.wbn", []);
+      await addElementAndWaitForError(script1);
+      clearWebBundleFetchCount();
+
+      // Remove script1, then append script2
+      // script2 should reuse webbundle resources.
+      // And it should also fire an error event.
+      script1.remove();
+      script2 = createWebBundleElement("nonexistent.wbn", []);
+      await addElementAndWaitForError(script2);
+
+      assert_equals(webBundleFetchCount("nonexistent.wbn"), 0);
+    }, "'remove(), then append()' should reuse webbundle resources and both scripts should fire error events");
 
     promise_test(async (t) => {
       t.add_cleanup(cleanUp);
@@ -120,7 +157,7 @@
 
       await assertResource1CanNotBeFetched();
       await assertResource2CanBeFetched();
-      assert_equals(webBundleFetchCount(), 0);
+      assert_equals(webBundleFetchCount(wbn_suffix), 0);
     }, "Should reuse webbundle resources if a credential mode is same");
 
     promise_test(async (t) => {
@@ -135,7 +172,7 @@
 
       await assertResource1CanNotBeFetched();
       await assertResource2CanBeFetched();
-      assert_equals(webBundleFetchCount(), 1);
+      assert_equals(webBundleFetchCount(wbn_suffix), 1);
     }, "Should not reuse webbundle resources if a credentials mode is different (same-origin vs omit)");
 
     promise_test(async (t) => {
@@ -150,7 +187,7 @@
 
       await assertResource1CanNotBeFetched();
       await assertResource2CanBeFetched();
-      assert_equals(webBundleFetchCount(), 1);
+      assert_equals(webBundleFetchCount(wbn_suffix), 1);
     }, "Should not reuse webbundle resources if a credential mode is different (same-origin vs include");
 
     promise_test(async (t) => {
@@ -163,7 +200,7 @@
       document.body.append(script1);
 
       await assertResource1CanNotBeFetched();
-      assert_equals(webBundleFetchCount(), 0);
+      assert_equals(webBundleFetchCount(wbn_suffix), 0);
     }, "'remove(), then append()' for the same element should reuse webbundle resources");
 
     promise_test(async (t) => {
@@ -179,7 +216,7 @@
       document.body.append(script1);
 
       await assertResource1CanNotBeFetched();
-      assert_equals(webBundleFetchCount(), 0);
+      assert_equals(webBundleFetchCount(wbn_suffix), 0);
     }, "Multiple 'remove(), then append()' for the same element should reuse webbundle resources");
 
 
@@ -198,7 +235,7 @@
 
       await assertResource1CanNotBeFetched();
       await assertResource2CanBeFetched();
-      assert_equals(webBundleFetchCount(), 1);
+      assert_equals(webBundleFetchCount(wbn_suffix), 1);
     }, "'remove(), then append() in a separate task' should not reuse webbundle resources");
 
 
@@ -215,7 +252,7 @@
       await assertResource1CanNotBeFetched();
       await assertResource2CanBeFetched();
 
-      assert_equals(webBundleFetchCount(), 0);
+      assert_equals(webBundleFetchCount(wbn_suffix), 0);
     }, "replaceWith() should reuse webbundle resources.");
 
     promise_test(async (t) => {
@@ -233,7 +270,7 @@
       await assertResource1CanNotBeFetched();
       await assertResource2CanBeFetched();
 
-      assert_equals(webBundleFetchCount(), 0);
+      assert_equals(webBundleFetchCount(wbn_suffix), 0);
 
       // TODO: Test the following cases:
       // - The resources are not loaded from the webbundle in the new Document
@@ -243,5 +280,47 @@
       // original Document.
     }, "append() should reuse webbundle resoruces even if the old script was moved to another document.");
 
+    promise_test(async (t) => {
+      t.add_cleanup(cleanUp);
+      clearWebBundleFetchCount();
+      script1 = createWebBundleElement(wbn_url + "?pipe=trickle(d0.1)", resource1);
+      document.body.appendChild(script1);
+
+      // While script1 is still loading, remove it and make script2
+      // reuse the resources.
+      script1.remove();
+      script2 = createWebBundleElement(wbn_url + "?pipe=trickle(d0.1)", resource2);
+      await addElementAndWaitForLoad(script2);
+
+      assert_equals(webBundleFetchCount(wbn_suffix + "?pipe=trickle(d0.1)"), 1);
+    }, "Even if the bundle is still loading, we should reuse the resources.");
+
+    promise_test(async (t) => {
+      t.add_cleanup(cleanUp);
+      script1 = createScriptWebBundle1();
+      document.body.appendChild(script1);
+
+      // Don't wait for the load event for script1.
+      script1.remove();
+      script2 = createScriptWebBundle2();
+
+      // Load event should be fired for script2 regardless of
+      // whether script1 fired a load or not.
+      await addElementAndWaitForLoad(script2);
+    }, "When reusing the resources with script2, a load event should be fired regardless of if the script1 fired a load");
+
+    promise_test(async (t) => {
+      t.add_cleanup(cleanUp);
+      script1 = createWebBundleElement("nonexistent.wbn", []);
+      document.body.appendChild(script1);
+
+      // Don't wait for the error event for script1.
+      script1.remove();
+      script2 = createWebBundleElement("nonexistent.wbn", []);
+
+      // Error event should be fired for script2 regardless of
+      // whether script1 fired an error event or not.
+      await addElementAndWaitForError(script2);
+    }, "When reusing the resources with script2, an error event should be fired regardless of if the script1 fired an error");
   </script>
 </body>
