--- a/testing/web-platform/tests/html/cross-origin-opener-policy/reporting/document-reporting/reporting-redirect-with-same-origin-allow-popups.https.html
+++ b/testing/web-platform/tests/html/cross-origin-opener-policy/reporting/document-reporting/reporting-redirect-with-same-origin-allow-popups.https.html
@@ -7,10 +7,10 @@
 <script src=/common/get-host-info.sub.js></script>
 <script src="/common/utils.js"></script>
 <script src="/common/dispatcher/dispatcher.js"></script>
+<script src="/html/cross-origin-opener-policy/resources/common.js"></script>
 <script src="/html/cross-origin-opener-policy/reporting/resources/reporting-common.js"></script>
 <script>
 
-const directory = "/html/cross-origin-opener-policy";
 const same_origin = {
   host: get_host_info().HTTPS_ORIGIN,
   name: "Same origin"
@@ -20,9 +20,14 @@ const cross_origin = {
   name: "Cross origin"
 };
 
+function reportToken() {
+  // Report endpoint name must start with lower case alphabet.
+  return token().replace(/./, 'a');
+}
+
 // Tests the redirect interaction with COOP same-origin-allow-popups and
 // reporting:
-// 1 - open the opener document on origin same_origin with COOP
+// 1 - open the opener document on origin same_origin wit COOP
 // same-origin-allow-popups.
 // 2 - opener opens popup with document on origin popup_origin, no COOP and a
 // redirect header (HTTP 302, location).
@@ -43,18 +48,18 @@ const cross_origin = {
 // A         same-origin   same-origin-allow-popups
 // B         popup-origin  unsafe-none
 // C         same-origin   same-origin-allow-popups
-function redirect_test( popup_origin ) {
+function redirect_test(popup_origin) {
   promise_test(async t => {
     // The test window.
     const this_window_token = token();
 
     // The "opener" window. This has COOP same-origin-allow-popups and a
     // reporter.
-    const opener_report_token= token();
     const opener_token = token();
-    const opener_reportTo = reportToHeaders(opener_report_token);
+    const opener_report_token = reportToken();
+    const opener_reporting = reportingEndpointsHeaders(opener_report_token);
     const opener_url = same_origin.host + executor_path +
-      opener_reportTo.header + opener_reportTo.coopSameOriginAllowPopupsHeader +
+      opener_reporting.header + opener_reporting.coopSameOriginAllowPopupsHeader +
       `&uuid=${opener_token}`;
 
     // The "openee" window.
@@ -63,7 +68,7 @@ function redirect_test( popup_origin ) {
     // same-origin-allow-popups.
     const openee_token = token();
     const openee_redirect_url = same_origin.host + executor_path +
-      opener_reportTo.header + opener_reportTo.coopSameOriginAllowPopupsHeader +
+      opener_reporting.header + opener_reporting.coopSameOriginAllowPopupsHeader +
       `&uuid=${openee_token}`;
     const redirect_header = 'status(302)' +
       `|header(Location,${encodeURIComponent(
@@ -98,8 +103,8 @@ function redirect_test( popup_origin ) {
 
     // 5. Check a report sent to the openee.
     let report = await receiveReport(
-        opener_report_token,
-        "navigation-to-response");
+      opener_report_token,
+      "navigation-to-response");
     assert_equals(report.type, "coop");
     assert_equals(report.body.disposition, "enforce");
     assert_equals(report.body.effectivePolicy, "same-origin-allow-popups");
