--- a/testing/web-platform/tests/app-history/navigate-event/navigate-history-back-cross-document.html
+++ b/testing/web-platform/tests/app-history/navigate-event/navigate-history-back-cross-document.html
@@ -21,11 +21,11 @@ async_test(t => {
         assert_equals(e.destination.id, target_id);
         assert_equals(e.destination.index, 0);
         assert_equals(e.formData, null);
-        assert_equals(e.info, "hi");
+        assert_equals(e.info, undefined);
       });
       assert_true(i.contentWindow.appHistory.canGoBack);
-      i.contentWindow.appHistory.back({ info: "hi" });
+      i.contentWindow.history.back();
     })
   });
-}, "navigate event for appHistory.back() - cross-document");
+}, "navigate event for history.back() - cross-document");
 </script>
