Bug 1739308 [wpt PR 31497] - Fix showPicker() test leak, a=testonly
Automatic update from web-platform-tests
Fix showPicker() test leak

This CL makes sure the browser picker is closed to avoid leaking
in the showPicker() user gesture requirement test.
It also re-enables this test.

Change-Id: I839f1c282afbc51efe729d78e631637733c918f9
Bug: 1266635
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3259393
Auto-Submit: François Beaufort <beaufort.francoisgmail.com>
Commit-Queue: Mason Freed <masonfchromium.org>
Reviewed-by: Mason Freed <masonfchromium.org>
Cr-Commit-Position: refs/heads/main{#938251}

--

wpt-commits: 5fcf793abe5b7602c685f5c91bc3a7b018b3d3a8
wpt-pr: 31497

UltraBlame original commit: 504a8b96e9a2c3a3cb2b8161a85092495eeda39b

--- a/testing/web-platform/tests/html/semantics/forms/the-input-element/show-picker.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-input-element/show-picker.tentative.html
@@ -24,6 +24,7 @@ for (const inputType of inputTypes) {
 
     await test_driver.bless('show picker');
     input.showPicker();
+    await test_driver.bless('close picker');
   }, `input[type=${inputType}] showPicker() does not throw when user activation is active`);
 }
 </script>
