--- a/accessible/tests/mochitest/events/test_focus_selects.html
+++ b/accessible/tests/mochitest/events/test_focus_selects.html
@@ -21,7 +21,6 @@
   <script type="application/javascript">
     // gA11yEventDumpID = "eventdump"; // debug stuff
     // gA11yEventDumpToConsole = true;
-
     var gQueue = null;
 
     async function doTests() {
@@ -39,20 +38,33 @@
 
       p = waitForEvents({
         expected: [[EVENT_SELECTION, "orange"]],
-        unexpected: [[EVENT_FOCUS]]
+        unexpected: [
+          [EVENT_FOCUS],
+          stateChangeEventArgs("orange", EXT_STATE_ACTIVE, true, true),
+        ],
       });
-      // item is selected and stays focused
+      // item is selected and stays focused and active
       synthesizeKey("VK_DOWN");
       await p;
 
-      p = waitForEvent(EVENT_FOCUS, "apple");
+      p = waitForEvents([
+        stateChangeEventArgs("orange", EXT_STATE_ACTIVE, false, true),
+        stateChangeEventArgs("apple", EXT_STATE_ACTIVE, true, true),
+        [EVENT_FOCUS, "apple"],
+      ]);
       // last selected item is focused
       synthesizeKey("VK_DOWN", { shiftKey: true });
       await p;
 
       p = waitForEvents({
-        expected: [[EVENT_FOCUS, "orange"]],
-        unexpected: [[EVENT_FOCUS, "apple"]]
+        expected: [
+          [EVENT_FOCUS, "orange"],
+          stateChangeEventArgs("orange", EXT_STATE_ACTIVE, true, true),
+        ],
+        unexpected: [
+          [EVENT_FOCUS, "apple"],
+          stateChangeEventArgs("apple", EXT_STATE_ACTIVE, true, true),
+        ],
       });
       // no focus event if nothing is changed
       synthesizeKey("VK_DOWN");
@@ -65,7 +77,10 @@
       synthesizeKey("VK_TAB");
       await p;
 
-      p = waitForEvent(EVENT_FOCUS, "orange");
+      p = waitForEvents({
+        expected: [[EVENT_FOCUS, "orange"]],
+        unexpected: [stateChangeEventArgs("orange", EXT_STATE_ACTIVE, true, true)],
+      });
       // current item is focused
       synthesizeKey("VK_TAB", { shiftKey: true });
       await p;
@@ -75,8 +90,11 @@
       await p;
 
       p = waitForEvents({
-        expected: [[EVENT_SELECTION, "cb_apple"]],
-        unexpected: [[EVENT_FOCUS]]
+        expected: [
+          [EVENT_SELECTION, "cb_apple"],
+          stateChangeEventArgs("cb_apple", EXT_STATE_ACTIVE, true, true),
+        ],
+        unexpected: [[EVENT_FOCUS]],
       });
       // collapsed combobox keeps a focus
       synthesizeKey("VK_DOWN");
@@ -87,7 +105,12 @@
       synthesizeKey("VK_DOWN", { altKey: true });
       await p;
 
-      p = waitForEvent(EVENT_FOCUS, "cb_orange");
+      p = waitForEvents({
+        expected: [
+          [EVENT_SELECTION, "cb_orange"],
+          stateChangeEventArgs("cb_orange", EXT_STATE_ACTIVE, true, true),
+        ],
+      });
       // selected item is focused for expanded combobox
       synthesizeKey("VK_UP");
       await p;
@@ -106,15 +129,25 @@
 
       p = waitForEvents({
         expected: [[EVENT_SELECTION, "orange"]],
-        unexpected: [[EVENT_FOCUS]]
+        unexpected: [
+          [EVENT_FOCUS],
+          stateChangeEventArgs("orange", EXT_STATE_ACTIVE, true, true),
+        ],
       });
+      // An unfocused selectable list gets selection change events,
+      // but not active or focus change events.
       getNode("list").selectedIndex = getNode("orange").index;
       await p;
 
       p = waitForEvents({
-        expected: [[EVENT_SELECTION, "cb_apple"]],
-        unexpected: [[EVENT_FOCUS]]
+        expected: [
+          [EVENT_SELECTION, "cb_apple"],
+          stateChangeEventArgs("cb_apple", EXT_STATE_ACTIVE, true, true),
+        ],
+        unexpected: [[EVENT_FOCUS]],
       });
+      // An unfocused selectable combobox gets selection change events,
+      // and active state change events, but not focus.
       getNode("cb_apple").selected = true;
       await p;
 
