--- a/devtools/client/webconsole/index.html
+++ b/devtools/client/webconsole/index.html
@@ -1,6 +1,6 @@
-
-
-
+<!-- This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this
+   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <!DOCTYPE html>
 <html dir=""
       id="devtools-webconsole"
@@ -15,14 +15,15 @@
     <link rel="stylesheet" href="chrome://devtools/skin/webconsole.css"/>
     <link rel="stylesheet" href="chrome://devtools/skin/components-frame.css"/>
     <link rel="stylesheet" href="chrome://devtools/content/shared/components/SmartTrace.css"/>
-    
+    <!-- Needed for the ObjectInspector -->
     <link rel="stylesheet" type="text/css" href="chrome://devtools/content/shared/components/reps/reps.css"/>
-    
+    <!-- Needed for the ObjectInspector -->
     <link rel="stylesheet" type="text/css" href="chrome://devtools/content/shared/components/Tree.css"/>
     <link rel="stylesheet" href="chrome://devtools/content/shared/components/object-inspector/components/ObjectInspector.css"/>
     <link rel="stylesheet" href="chrome://devtools/content/shared/components/tabs/Tabs.css"/>
     <link rel="stylesheet" href="chrome://devtools/content/shared/components/NotificationBox.css"/>
     <link rel="stylesheet" href="chrome://devtools/content/shared/components/splitter/GridElementResizer.css"/>
+    <link rel="stylesheet" href="chrome://devtools/content/shared/components/AppErrorBoundary.css">
     <link rel="stylesheet" href="chrome://devtools/content/netmonitor/src/assets/styles/httpi.css"/>
     <link rel="stylesheet" href="chrome://devtools/content/webconsole/components/Input/EagerEvaluation.css"/>
     <link rel="stylesheet" href="chrome://devtools/content/webconsole/components/Input/EvaluationContextSelector.css"/>
