--- a/toolkit/mozapps/extensions/content/abuse-report-frame.html
+++ b/toolkit/mozapps/extensions/content/abuse-report-frame.html
@@ -1,6 +1,6 @@
-
-
-
+<!-- This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this file,
+   - You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <!DOCTYPE html>
 <html>
@@ -20,7 +20,7 @@
   <body>
     <addon-abuse-report></addon-abuse-report>
 
-    
+    <!-- WebComponents Templates -->
     <template id="tmpl-modal">
       <div class="modal-overlay-outer"></div>
       <div class="modal-panel-container"></div>
@@ -135,6 +135,14 @@
 
     <template id="tmpl-suggestions-broken-theme">
       <p data-l10n-id="abuse-report-broken-suggestions-theme">
+        <a class="extension-support-link" target="_blank"
+           data-l10n-name="support-link">
+        </a>
+      <p>
+    </template>
+
+    <template id="tmpl-suggestions-broken-sitepermission">
+      <p data-l10n-id="abuse-report-broken-suggestions-sitepermission">
         <a class="extension-support-link" target="_blank"
            data-l10n-name="support-link">
         </a>
